tests/rosetta/transpiler/rb/case-sensitivity-of-identifiers.rb
# Generated by Mochi transpiler v0.10.39 on 2025-07-24 20:52 +0700

def _add(a, b)
  if a.is_a?(Array) && b.is_a?(String)
    a.join + b
  elsif a.is_a?(String) && b.is_a?(Array)
    a + b.join
  else
    a + b
  end
end


def _padStart(s, len, ch)
  s.rjust(len, ch)
end

def main()
  pkg_dog = "Salt"
  Dog = "Pepper"
  pkg_DOG = "Mustard"
  packageSees = ->(d1, d2, d3) {
    puts(_add(_add(_add(_add(_add("Package sees: ", d1), " "), d2), " "), d3))
    return {"pkg_dog" => true, "Dog" => true, "pkg_DOG" => true}
  }
  d = packageSees.call(pkg_dog, Dog, pkg_DOG)
  puts(_add(_add("There are ", (d.length).to_s), " dogs.\n"))
  dog = "Benjamin"
  d = packageSees.call(pkg_dog, Dog, pkg_DOG)
  puts(_add(_add(_add(_add(_add("Main sees:   ", dog), " "), Dog), " "), pkg_DOG))
  d["dog"] = true
  d["Dog"] = true
  d["pkg_DOG"] = true
  puts(_add(_add("There are ", (d.length).to_s), " dogs.\n"))
  Dog = "Samba"
  d = packageSees.call(pkg_dog, Dog, pkg_DOG)
  puts(_add(_add(_add(_add(_add("Main sees:   ", dog), " "), Dog), " "), pkg_DOG))
  d["dog"] = true
  d["Dog"] = true
  d["pkg_DOG"] = true
  puts(_add(_add("There are ", (d.length).to_s), " dogs.\n"))
  DOG = "Bernie"
  d = packageSees.call(pkg_dog, Dog, pkg_DOG)
  puts(_add(_add(_add(_add(_add("Main sees:   ", dog), " "), Dog), " "), DOG))
  d["dog"] = true
  d["Dog"] = true
  d["pkg_DOG"] = true
  d["DOG"] = true
  puts(_add(_add("There are ", (d.length).to_s), " dogs."))
end
main()
